fix horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,7 @@ body {
   color: rgb(5,5,5);
   background: whitesmoke;
   height: 100%;
+  overflow-x: unset;
 }
 
 img
